# onekey

./: .gitignore  LICENCE  LICENCE.md  README.md  main.py  pyproject.toml  sandbox.py
docs/: INSTALL_ARM.md  INSTALL_EN.md  INSTALL_RU.md  core.md  home.md
src/onekey/: __init__.py  main.py
src/onekey/core/: __init__.py  core.py  keygen.py  randomorg_api.json
src/onekey/tool/: core.py
