[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onekey"
version = "0.0.1.dev140925"
description = "Password meneger based on sha256 hash."
readme = "README.md"
authors = [{ name = "Stpatrirach", email = "chinaryannarek@gmail.com"}]
license = { file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "setuptools>=49.0.0",
    "pyperclip>=1.9.0",
    "requests>=2.32.5"
]

[tool.setuptools]
packages = [
"onekey", 
"onekey.core", 
] 
package-dir = {"" = "src"}

[project.scripts]
onekey = "onekey.main:main"

